@@ -1,3 +1,12 @@
+2004-05-08  Alexey Shchepin  <alexey@sevcom.net>
+
+	* doc/guide.tex: Updated
+
+	* src/ejabberd_listener.erl: Now possible to specify interface on
+	which one socket will be listened, also added another way to
+	specify SSL options
+	* src/ejabberd.cfg.example: Updated
+
 2004-05-07  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/web/ejabberd_web_admin.erl: Updated (thanks to Andrey
